post metthod, test async
