# src/docs/swagger.json
@@ -18,6 +18,53 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/api/v1/create": {
+            "post": {
+                "description": "Создает новый объект, принимая JSON в теле запроса",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "create"
+                ],
+                "summary": "Создать новый объект",
+                "parameters": [
+                    {
+                        "description": "Тело запроса",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/hello": {
             "get": {
                 "description": "Возвращает сообщение \"Hello, World!\"",
@@ -30,7 +77,6 @@
                 "tags": [
                     "example"
                 ],
-                "summary": "Получить приветствие",
                 "responses": {
                     "200": {
                         "description": "Hello, World!",
